--- a/final/Makefile
+++ b/final/Makefile
@@ -1,4 +1,12 @@
-tandorc:	tandorc.hs src/Lexer.hs src/Parser.hs
+sources = src/Absyn.hs src/Canon.hs src/Color.hs src/Env.hs src/Flow.hs \
+	  src/Graph.hs src/Liveness.hs src/Parser.hs src/Symbol.hs \
+          src/Translate.hs src/Types.hs src/Assem.hs src/Codegen.hs \
+          src/DalvikFrame.hs src/FindEscape.hs src/FrameBase.hs \
+          src/Lexer.hs src/MakeGraph.hs src/Semant.hs src/Temp.hs \
+          src/Tree.hs
+
+
+tandorc:	tandorc.hs $(sources)
 	ghc -Wall -isrc $<
 
 src/Lexer.hs:	src/Lexer.x
